Bug 32088 - [swrast] implementation error: unexpected format 0x8227 in _swrast_ReadPixels
Summary: [swrast] implementation error: unexpected format 0x8227 in _swrast_ReadPixels
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-03 14:13 UTC by Vinson Lee
Modified: 2010-12-04 14:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-12-03 14:13:32 UTC
mesa: b7acf538af24ddab72a5cbd5975f089a747b68e4 (master)

Run piglit texture-rg test.

$ ./bin/texture-rg
Mesa 7.10-devel implementation error: unexpected format 0x8227 in _swrast_ReadPixels
Please report at bugzilla.freedesktop.org
texture-rg: failure with format GL_R8:
  expected color = 0.5, 0, 0, 1
  result color = 0, 0, 0, 1


mesa/include/GL/glext.h
  1700  #define GL_RG                             0x8227


mesa/src/mesa/swrast/s_readpix.c
   456  void
   457  _swrast_ReadPixels( struct gl_context *ctx,
   458                      GLint x, GLint y, GLsizei width, GLsizei height,
   459                      GLenum format, GLenum type,
   460                      const struct gl_pixelstore_attrib *packing,
   461                      GLvoid *pixels )
   462  {
...
   516        default:
   517           _mesa_problem(ctx, "unexpected format 0x%x in _swrast_ReadPixels", format);
   518           /* don't return yet, clean-up */
Comment 1 Brian Paul 2010-12-03 14:26:58 UTC
Fixed with Mesa commit 5fc2548faea31acdd08bbb0f016ea41c6f01cf41
Comment 2 Vinson Lee 2010-12-04 14:57:22 UTC
mesa: 859106f196ade77f59f8787b071739901cd1a843 (master)

Verified fixed.

piglit texture-rg passes on swrast.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.