swrast: accept GL_RG in glReadPixels()

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=32088